--- a/style.css
+++ b/style.css
@@ -5,6 +5,12 @@
     list-style: none;
     box-sizing: border-box;
 }
+
+:root {
+    --background-color: #f7fdfc;
+    --button-color: #2ec4b6;
+  }
+  
 header {
     border: 1px solid red;
 }
