--- a/style.css
+++ b/style.css
@@ -57,41 +57,41 @@ body {
     padding-inline: 1.2rem;
     padding-block: 4rem;
 }
-
+/* ******************************HEADER STYLING**************************** */
 header .logo {
   padding-block-end: 1rem;
 }
 
-.text-div h1 {
-  padding-block-end: .5rem;
-  font-weight: bold;
-}
-
-.text-div p {
-  padding-block-end: 1.5rem;
-  font-weight: 300;
+header {
+  border: 1px solid red;
 }
 
 header .logo img {
-    background-size: contain;
-    height: 40px;
-    width: auto;
+  background-size: contain;
+  height: 40px;
+  width: auto;
 }
 
-header {
-    border: 1px solid red;
+header .text-div h1 {
+  padding-block-end: .5rem;
+  font-weight: bold;
+  font-size: 2rem;
 }
 
-header h1 {
-    font-weight: 900;
+header .text-div p {
+  padding-block-end: 2rem;
+  font-weight: 300;
 }
 
+/* ******************************FORM STYLING**************************** */
 .form-container {
     max-width: 100%; /* Make the form container fill the screen width on mobile */
     margin: 0 auto;
     background: var(--white-color);
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    padding-block: 1.3rem;
+    padding-inline: 1.1rem;
   }
   
   form {
@@ -102,12 +102,14 @@ header h1 {
   label {
     margin-bottom: 5px;
     font-size: 1rem;
+    font-family: 'Brown';
+    font-weight: bold;
   }
   
   input,
-  textarea {
+  textarea, select {
     width: 100%;
-    padding: 10px;
+    padding: .8rem;
     margin-bottom: 15px;
     font-size: 1rem;
     border: 1px solid #ccc;
