--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    text-decoration: none;
+    /* text-decoration: none; */
     list-style: none;
     box-sizing: border-box;
     font-family: 'Brown', Arial, sans-serif;
@@ -48,6 +48,7 @@
 :root {
     --background-color: #f7fdfc;
     --button-color: #2ec4b6;
+    --button-on-hover: #259e98;
     --white-color: #ffffff;
     --p-color: #737373;
   }
@@ -121,17 +122,17 @@ header .text-div p {
   }
   
   button {
-    padding: 10px;
+    padding: 1rem;
     font-size: 1rem;
     color: #fff;
-    background-color: #3498db;
+    background-color: var(--button-color);
     border: none;
     border-radius: 5px;
     cursor: pointer;
   }
   
   button:hover {
-    background-color: #2980b9;
+    background-color: var(--button-on-hover);
   }
   
   /* Media Queries for Larger Screens */
