--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ header .text-div p {
     font-family: 'Brown';
     font-weight: bold;
   }
-  
+
   input,
   textarea, select {
     width: 100%;
@@ -116,7 +116,13 @@ header .text-div p {
     font-size: 1rem;
     border: 1px solid #ccc;
     border-radius: 5px;
+    outline: none;
   }
+
+  input[type="text"]:focus, input[type="password"]:focus, textarea:focus {
+    border-color: #007BFF; /* Blue border on focus */
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5); /* Optional shadow effect */
+}
   
   textarea {
     resize: vertical; /* Allow vertical resizing of the textarea */
@@ -152,6 +158,10 @@ header .text-div p {
     color: var(--button-color);
     font-weight: 300;
   }
+
+
+
+
   /* Media Queries for Larger Screens */
   @media (min-width: 768px) and (max-width: 1400px) {
     body {
@@ -161,15 +171,22 @@ header .text-div p {
     }
 
     .form-container {
-      width: 60%;
+      width: 80%;
     }
 
     .by-clicking {
       display: none;
     }
 
-    form {
-      display: flex;
-      flex-direction: column; /* Stack form elements vertically */
-    }
+   .fln {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border: 1px solid red
+   }
+
+   .firstn, .lastn{
+    padding-inline: 1rem;
+   }
+   
   }
