--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@
 
 :root {
     --background-color: #f7fdfc;
-    --button-color: #2ec4b6;
+    --button-color: rgb(46, 196, 182);
     --button-on-hover: #259e98;
     --white-color: #ffffff;
     --p-color: #737373;
@@ -64,13 +64,15 @@ header .logo {
 }
 
 header {
-  border: 1px solid red;
+  background-color: none;
 }
 
 header .logo img {
   background-size: contain;
   height: 40px;
   width: auto;
+  border-radius: 50%;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); 
 }
 
 header .text-div h1 {
@@ -90,10 +92,9 @@ header .text-div p {
     margin: 0 auto;
     background: var(--white-color);
     border-radius: 8px;
-    box-shadow: 6px 6px 29px -15px rgba(0,0,0,0.20);
+    box-shadow: -2px 6px 29px -15px rgba(0,0,0,0.20);
     padding-block: 1.3rem;
     padding-inline: 1.1rem;
-    border: 1px solid green;
   }
   
   form {
@@ -102,10 +103,11 @@ header .text-div p {
   }
   
   label {
-    margin-bottom: 5px;
+    margin-block-end: 8px;
     font-size: 1rem;
     font-family: 'Brown';
     font-weight: bold;
+    display: inline-table;
   }
 
   input,
@@ -119,9 +121,9 @@ header .text-div p {
     outline: none;
   }
 
-  input[type="text"]:focus, input[type="password"]:focus, textarea:focus {
-    border-color: #007BFF; /* Blue border on focus */
-    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5); /* Optional shadow effect */
+  input[type="text"]:focus, input[type="password"]:focus, input[type="date"]:focus, input[type="email"]:focus,  select:focus, textarea:focus {
+    border-color: var(--button-color); 
+    box-shadow: 0 0 5px rgba(46, 196, 182, 0.5);
 }
   
   textarea {
@@ -145,7 +147,7 @@ header .text-div p {
   .by-clicking {
     margin: 0 auto;
     max-width: 100%;
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
   }
 
   .by-clicking p {
@@ -160,6 +162,12 @@ header .text-div p {
   }
 
 
+  /* Media Queries for Smaller Screens */
+  @media (min-width: 200px) and (max-width: 768px) {
+    .by-click {
+      display: none;
+    }
+  }
 
 
   /* Media Queries for Larger Screens */
@@ -168,6 +176,10 @@ header .text-div p {
       display: flex;
       align-items: flex-start;
       justify-content: center;
+    }
+
+    header {
+      margin-block-start: 8rem;
     }
 
     .form-container {
@@ -182,11 +194,27 @@ header .text-div p {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border: 1px solid red
    }
 
-   .firstn, .lastn{
-    padding-inline: 1rem;
+   .firstn{
+    padding-inline-end: 1rem;
+   }
+   .by-click {
+    margin: 0 auto;
+    max-width: 100%;
+    /* border: 1px solid blue; */
+  }
+
+  .by-click p {
+    font-size: .9rem;
+    padding-block: 1.2rem;
+    padding-inline: .8rem;
+  }
+  
+  .by-click p a {
+    color: var(--button-color);
+    font-weight: 300;
+  }
+
    }
    
-  }
