--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ select {
   border-radius: 5px;
   outline: none;
 }
-
+/* ***********************STYLING GLOW FOR ONFOCUS *****************/
 input[type="text"]:focus,
 input[type="password"]:focus,
 input[type="date"]:focus,
@@ -203,6 +203,14 @@ button:hover {
     gap: 1.3rem;
   }
 
+  header .text-div h1 {
+    font-size: 2.5rem;
+  }
+
+  header .text-div p {
+    line-height: 1.2;
+  }
+
   .firstn, .lastn {
     width: 18.75rem;
   }
@@ -212,7 +220,6 @@ button:hover {
     max-width: 100%;
     /* border: 1px solid blue; */
   }
-
   .by-click p {
     font-size: 0.87rem;
     padding-block: 1.2rem;
