Assigned #ffffff background for the <input/select>

--- a/style.css
+++ b/style.css
@@ -119,6 +119,7 @@ select {
   border: 1px solid #ccc;
   border-radius: 5px;
   outline: none;
+  background-color: #ffffff;
 }
 /* ***********************STYLING GLOW FOR ONFOCUS *****************/
 input[type="text"]:focus,
