--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ button:hover {
   font-size: 1rem;
   padding-block: 1.2rem;
   padding-inline: 0.8rem;
-  line-height: 1.5;
+  /* line-height: 1.5; */
 }
 
 .by-clicking p a {
